# project14

./: CMakeLists.txt  Test
Examples/: hope  input1
Headers/: PreAsse.h  PreAssembler.h  buildOutPut.h  datastrct.h  firstPass.h  general.h  infoTable.h  nodes.h  secondPass.h  symbolTable.h  table.h
Sourcefiles/: PreAssembler  PreAssembler.c  binaryTranslation.c  buildOutPut.c  datastrct.c  firstPass.c  general.c  infoTable.c  main.c  nodes.c  secondPass.c  symbolTable.c  table.c
TextFiles/: input1  input1.as  input2.as  make  postPreAssembler
